Login with Google

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,6 +1,7 @@
 defaults: &defaults
-  help_page_url: "http://www.railstutorial.org/help"
-  book_url: "http://www.railstutorial.org/book"
+help_page_url: "http://www.railstutorial.org/help"
+book_url: "http://www.railstutorial.org/book"
+google_logo_url: "https://img.icons8.com/color/48/000000/google-logo.png"
 
 user:
   max_name_length: 50
