--- a/config/settings.yml
+++ b/config/settings.yml
@@ -4,6 +4,8 @@ book_url: "http://www.railstutorial.org/book"
 google_logo_url: "https://img.icons8.com/color/48/000000/google-logo.png"
 lucide_js_path: "https://cdn.jsdelivr.net/npm/lucide@latest/dist/umd/lucide.js"
 
+page_6: 6
+
 user:
   max_name_length: 50
   max_email_length: 255
