--- a/config/settings.yml
+++ b/config/settings.yml
@@ -18,6 +18,11 @@ word:
     last_30_days: 30
   date_format: "%d/%m/%Y"
 
+course:
+  min_duration: 1
+  max_duration: 365
+  date_format: "%d/%m/%Y"
+  
 development:
   <<: *defaults
 
