--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
 node_modules/
+
+# Ignore coverage reports
+/coverage/
